--- a/app/stylesheets/addproduct.css
+++ b/app/stylesheets/addproduct.css
@@ -36,15 +36,16 @@
 label{
     font-size: 120%;
 }
+
 .btn{
-    background-color: #4CAF50;
+    background-color:dodgerblue;
     border: none;
     color: white;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 20px;
     margin: 4px 2px;
     cursor: pointer;
     border-radius: 8px;
